<resources>
    <string name="app_name">Panzer</string>
    <string name="title_activity_main">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="tab_home">主页</string>
    <string name="tab_cate">分类</string>
    <string name="tab_search">搜索</string>
    <string name="tab_cart">购物车</string>
    <string name="tab_mine">我的</string>

    <string name="splash_text">XX商城</string>
    <string name="splash_skip_text">跳过 3</string>
    <string name="splash_skip_format">跳过 %d</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment1">Hello blank fragment1</string>
    <string name="hello_blank_fragment2">Hello blank fragment2</string>
    <string name="hello_blank_fragment3">Hello blank fragment3</string>
    <string name="hello_blank_fragment4">Hello blank fragment4</string>
    <string name="hello_blank_fragment5">Hello blank fragment5</string>
    <string name="title_activity_goods">GoodsActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="last_info">然后，就没有然后了~</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>